--- a/_sass/color_schemes/wis-tex.scss
+++ b/_sass/color_schemes/wis-tex.scss
@@ -1,21 +1,153 @@
 @import "./color_schemes/light";
 
-$gradient-start: $orange-000 !default;
-$gradient-end: $red-300 !default;
+@font-face {
+  font-family: 'CMU Serif' !important;
+  src: font_url('fonts/cmunbi.ttf') format('ttf'),
+       font_url('fonts/cmunbx.ttf') format('ttf'),
+       font_url('fonts/cmunrm.ttf') format('ttf'),
+       font_url('fonts/cmunti.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 
-$color-scheme: light !default;
-$body-background-color: $white !default;
-$body-heading-color: $grey-dk-300 !default;
-$body-text-color: $grey-dk-100 !default;
-$link-color: $orange-100;
-$nav-child-link-color: $grey-dk-100 !default;
-$sidebar-color: mix($orange-000, $white, 5%);
-$base-button-color: #f7f7f7 !default;
-$btn-primary-color: $orange-100;
-$code-background-color: $grey-lt-100 !default;
-$feedback-color: darken($sidebar-color, 3%) !default;
-$table-background-color: $white !default;
-$search-background-color: $white !default;
-$search-result-preview-color: $grey-dk-000 !default;
+@font-face {
+  font-family: 'CMU Sans Serif' !important;
+  src: font_url('fonts/cmunsi.ttf') format('ttf'),
+       font_url('fonts/cmunso.ttf') format('ttf'),
+       font_url('fonts/cmunss.ttf') format('ttf'),
+       font_url('fonts/cmunsx.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 
-$body-font-family: "Helvetica", "Arial", sans-serif;
+@font-face {
+  font-family: 'CMU Typewriter Text' !important;
+  src: font_url('fonts/cmunbtl.ttf') format('ttf'),
+       font_url('fonts/cmunbto.ttf') format('ttf'),
+       font_url('fonts/cmunit.ttf') format('ttf'),
+       font_url('fonts/cmuntb.ttf') format('ttf'),
+       font_url('fonts/cmuntt.ttf') format('ttf'),
+       font_url('fonts/cmuntx.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto' !important;
+    src: font_url('fonts/Roboto-Regular.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: font_url('fonts/Roboto-Bold.ttf') format('ttf');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: font_url('fonts/Roboto-Light.ttf') format('ttf');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: font_url('fonts/Roboto-Medium.ttf') format('ttf');
+    font-weight: 500;
+    font-style: normal;
+}
+
+.main-content {
+    line-height: 1.4 !important;
+}
+
+.active {
+    // 
+}
+
+.nav-list-item {
+    // border: 1px solid black;
+    padding: 0 !important;
+}
+
+.site-title {
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif !important;
+}
+
+body {
+    font-family: 'Roboto', sans-serif !important;
+    color: rgba(60, 66, 87) !important;
+    font-weight: 400;
+}
+
+.main-content h1 {
+    font-size: 28px !important;
+    font-weight: bold !important;
+    margin-top: 32px !important;
+    margin-bottom: 16px !important;
+}
+
+h2 {
+    font-weight: bold !important;
+}
+
+code {
+    background-color: transparent !important;
+    padding: 0 !important;
+    border: none !important;
+    font-size: 16px !important;
+}
+
+.highlight {
+    padding: 0 0 0 16px !important;
+    background-color: transparent !important;
+}
+
+.highlighter-rouge {
+    background-color: transparent !important;
+}
+
+.c {
+    font-style: normal !important;
+}
+
+.search, .search-input, .site-button {
+}
+
+pre {
+    padding: 0 !important;
+    line-height: 1;
+    color: black !important;
+}
+
+
+.side-bar {
+    background-color: white !important;
+    border: none !important;
+    font-family: 'CMU Sans Serif', sans-serif !important;
+}
+
+
+// $gradient-start: $orange-000 !default;
+// $gradient-end: $red-300 !default;
+
+// $color-scheme: light !default;
+// $body-background-color: $white !default;
+// $body-heading-color: $grey-dk-300 !default;
+// $body-text-color: $grey-dk-100 !default;
+// $link-color: $orange-100;
+// $nav-child-link-color: $grey-dk-100 !default;
+// $sidebar-color: #212529 !default;
+// $base-button-color: #f7f7f7 !default;
+// $btn-primary-color: $orange-100;
+// $code-background-color: $grey-lt-100 !default;
+// $feedback-color: darken($sidebar-color, 3%) !default;
+// $table-background-color: $white !default;
+// $search-background-color: $white !default;
+// $search-result-preview-color: $grey-dk-000 !default;
+
+// $body-font-family: "Helvetica", "Arial", sans-serif;
